[package]
name = "kvs"
version = "0.1.0"
edition = "2021"
authors = ["Drake Bennion <drake.bennion@gmail.com>"]
description = "A key-value store, implementing PingCAP's talent plan KVS"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
test = false
doctest = false

[[bin]]
name = "kvs"
test = false
doctest = false

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
